syntax = "proto3";

package auth;

option go_package = "/auth";

message AuthRequest{
  string token = 1;
}

message AuthResponse {
  bool isAuth = 1;
  string user = 2;
}

service AuthService {
  rpc CheckAuth(AuthRequest) returns (AuthResponse);
}